# pytest-qatouch

./: .bumpversion.cfg  .gitignore  LICENSE  MANIFEST.in  README.md  codecov.yml  pyproject.toml  pytest.ini  setup.py
.github/scripts/: create-pythonenv.sh
.github/workflows/: code-test.yml  codeql-analysis.yml  coverage-codecov.yml  pyplugin-test.yml  workflow_dispatch.yml
src/consumer/: pyqatouch.py
src/pytest_qatouch/: __init__.py  apis_calls.py  plugin.py  qatouch.py  qatouch_apis.py  utils.py
tests/: conftest.py  test_basic_qatouch.py
