[project]
name = "pytest-qatouch"
version = "0.2.2"
description = "Pytest plugin for uploading test results to your QA Touch Testrun."
authors = [
    {name = "Mohamed Raslan", email = "MohamedRaslanG@gmail.com" }
]

maintainers = [
    {name = "Mohamed Raslan", email = "MohamedRaslanG@gmail.com" }
]

dependencies = [
    "pytest>=7.4.3",
    "requests>=2.31.0",
    "setuptools>=68.2.2",
    "uplink[aiohttp,pydantic]>=0.9.7",
]

requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["qatouch", "pytest", "pytest-qatouch", "pytest-pyqatouch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/MohamedRaslan/pytest-qatouch"
Source = "https://github.com/MohamedRaslan/pytest-qatouch"
Tracker = "https://github.com/MohamedRaslan/pytest-qatouch/issues"

[project.entry-points.pytest11]
pyqatouch = "pytest_qatouch.plugin"
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 100
[tool.pdm]
package-dir = "src"

[tool.pdm.dev-dependencies]
testing = [
    "bump2version>=1.0.1",
    "pytest-cov>=4.1.0",
    "responses>=0.24.0",
]
linting = [
    "black>=23.11.0",
    "pylint>=3.0.2",
]
extra = [
    "rich>=13.6.0",
]

